syntax = "proto3";

package authentication;

//Methods exposed to client
service AuthenticationService {
  rpc authenticateUser (AuthenticationRequest) returns (AuthenticationReply){}
  rpc storeUser (AuthenticationRequest) returns (StorageReply){}
}

// Message Type definition for user
message AuthenticationRequest {
  int32 _id = 1;
  string password = 2;
}

message AuthenticationReply {
  bool authenticated = 1;
}

message StorageReply {
  bool stored = 1;
}
